--- a/parser/requirements.txt
+++ b/parser/requirements.txt
@@ -1,10 +1,21 @@
+annotated-types==0.7.0
 black==25.9.0
 click==8.3.0
+dnspython==2.8.0
+email-validator==2.3.0
+idna==3.11
+iniconfig==2.1.0
 mypy==1.18.2
 mypy_extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.5.0
+pluggy==1.6.0
+pydantic==2.12.3
+pydantic_core==2.41.4
+Pygments==2.19.2
 PyMuPDF==1.26.5
+pytest==8.4.2
 pytokens==0.1.10
+typing-inspection==0.4.2
 typing_extensions==4.15.0
