--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -79,7 +79,7 @@
 		<dependency>
 			<groupId>com.google.api-client</groupId>
 			<artifactId>google-api-client</artifactId>
-			<version>2.0.0</version>
+			<version>2.2.0</version>
 		</dependency>
 
 		<!-- OAuth client (Jetty version) -->
@@ -94,6 +94,19 @@
 			<groupId>com.google.apis</groupId>
 			<artifactId>google-api-services-gmail</artifactId>
 			<version>v1-rev20220404-2.0.0</version>
+		</dependency>
+
+		<!-- Google HTTP Client and JSON support -->
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client-jackson2</artifactId>
+			<version>1.42.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-drive</artifactId>
+			<version>v3-rev20230822-2.0.0</version>
 		</dependency>
 
 		<!-- Mime Message -->
