[BACKEND] add endpoints for parsing and displaying cv

--- a/parser/requirements.txt
+++ b/parser/requirements.txt
@@ -1,21 +1,57 @@
 annotated-types==0.7.0
 black==25.9.0
+blis==1.3.0
+catalogue==2.0.10
+certifi==2025.10.5
+charset-normalizer==3.4.4
 click==8.3.0
+cloudpathlib==0.23.0
+confection==0.1.5
+cymem==2.0.11
 dnspython==2.8.0
 email-validator==2.3.0
 idna==3.11
 iniconfig==2.1.0
+Jinja2==3.1.6
+langcodes==3.5.0
+language_data==1.3.0
+marisa-trie==1.3.1
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+murmurhash==1.0.13
 mypy==1.18.2
 mypy_extensions==1.1.0
+numpy==2.3.4
 packaging==25.0
 pathspec==0.12.1
+pl_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/pl_core_news_sm-3.8.0/pl_core_news_sm-3.8.0-py3-none-any.whl#sha256=9b536db854b0cdb9132a74f68b392b8112ab6030f971bb03282462362a940dbb
 platformdirs==4.5.0
 pluggy==1.6.0
+preshed==3.0.10
 pydantic==2.12.3
 pydantic_core==2.41.4
 Pygments==2.19.2
 PyMuPDF==1.26.5
+pyparsing==3.2.5
 pytest==8.4.2
 pytokens==0.1.10
+requests==2.32.5
+rich==14.2.0
+setuptools==80.9.0
+shellingham==1.5.4
+smart_open==7.4.4
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
+thinc==8.3.7
+tqdm==4.67.1
+typer==0.20.0
+typer-slim==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+urllib3==2.5.0
+wasabi==1.1.3
+weasel==0.4.2
+wrapt==2.0.0
