[PARSER] Rewritten education section parser

--- a/parser/requirements.txt
+++ b/parser/requirements.txt
@@ -1,17 +1,18 @@
 annotated-types==0.7.0
-black==25.9.0
-blis==1.3.0
+black==25.11.0
+blis==1.3.3
 catalogue==2.0.10
-certifi==2025.10.5
+certifi==2025.11.12
 charset-normalizer==3.4.4
-click==8.3.0
+click==8.3.1
 cloudpathlib==0.23.0
+colorama==0.4.6
 confection==0.1.5
-cymem==2.0.11
+cymem==2.0.13
 dnspython==2.8.0
 email-validator==2.3.0
 idna==3.11
-iniconfig==2.1.0
+iniconfig==2.3.0
 Jinja2==3.1.6
 langcodes==3.5.0
 language_data==1.3.0
@@ -19,33 +20,34 @@ marisa-trie==1.3.1
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
-murmurhash==1.0.13
+murmurhash==1.0.15
 mypy==1.18.2
 mypy_extensions==1.1.0
-numpy==2.3.4
+numpy==2.3.5
 packaging==25.0
 pathspec==0.12.1
+pl_core_news_lg @ https://github.com/explosion/spacy-models/releases/download/pl_core_news_lg-3.8.0/pl_core_news_lg-3.8.0-py3-none-any.whl#sha256=3bc7296cd4d67fa9ee0904b25401b0e9a9a772d5c4756edf54143a2ff4c9dcc0
 pl_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/pl_core_news_sm-3.8.0/pl_core_news_sm-3.8.0-py3-none-any.whl#sha256=9b536db854b0cdb9132a74f68b392b8112ab6030f971bb03282462362a940dbb
 platformdirs==4.5.0
 pluggy==1.6.0
-preshed==3.0.10
-pydantic==2.12.3
-pydantic_core==2.41.4
+preshed==3.0.12
+pydantic==2.12.4
+pydantic_core==2.41.5
 Pygments==2.19.2
-PyMuPDF==1.26.5
+PyMuPDF==1.26.6
 pyparsing==3.2.5
-pytest==8.4.2
-pytokens==0.1.10
+pytest==9.0.1
+pytokens==0.3.0
 requests==2.32.5
 rich==14.2.0
 setuptools==80.9.0
 shellingham==1.5.4
-smart_open==7.4.4
-spacy==3.8.7
+smart_open==7.5.0
+spacy==3.8.11
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-srsly==2.5.1
-thinc==8.3.7
+srsly==2.5.2
+thinc==8.3.10
 tqdm==4.67.1
 typer==0.20.0
 typer-slim==0.20.0
@@ -53,5 +55,5 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
 wasabi==1.1.3
-weasel==0.4.2
-wrapt==2.0.0
+weasel==0.4.3
+wrapt==2.0.1
